# bumpalo

./: .gitattributes  .gitignore  .travis.yml  CHANGELOG.md  Cargo.nix  Cargo.toml  README.md  SECURITY.md  azure-pipelines.yml  flake.nix
.cargo/: config.toml
.github/workflows/: rust.yaml  rust.yml
benches/: README.md  allocator_api.rs  benches.rs  benches_alloc_with.rs  tables.toml
ci/: install-rust.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_bump.rs
src/: alloc.rs  boxed.rs  drop.rs  emplace.rs  impls.rs  iter.rs  lib.rs  pin.rs  zerocopy_integration.rs
src/alloc/: mod.rs  stable.rs
src/collections/: collect_in.rs  hash_map.rs  mod.rs  raw_vec.rs  string.rs  vec.rs
src/collections/str/: lossy.rs
tests/: alloc_fill.rs  alloc_with.rs  allocation_limit.rs  allocator_api.rs  collect_in.rs  quickchecks.rs  readme_up_to_date.rs  string.rs  tests.rs  try_alloc.rs  vec.rs
tests/all/: alloc_fill.rs  alloc_try_with.rs  alloc_with.rs  allocator_api.rs  boxed.rs  check.rs  collect_in.rs  emplace.rs  main.rs  pin.rs  quickcheck.rs  quickchecks.rs  serde.rs  string.rs  tests.rs  try_alloc_with.rs  vec.rs  zerocopy_integration.rs
