[package]
authors = ["Nick Fitzgerald <fitzgen@gmail.com>"]
categories = ["memory-management", "rust-patterns", "no-std"]
description = "A fast bump allocation arena for Rust."
documentation = "https://docs.rs/bumpalo"
edition = "2018"
license = "MIT/Apache-2.0"
name = "bumpalo"
readme = "README.md"
repository = "https://github.com/fitzgen/bumpalo"
version = "3.10.0"
exclude = ["/.github/*", "/benches", "/tests", "valgrind.supp", "bumpalo.png"]

[package.metadata.docs.rs]
all-features = true

[lib]
path = "src/lib.rs"
bench = false

[[bench]]
name = "benches"
path = "benches/benches.rs"
harness = false
required-features = ["collections"]

[[test]]
name = "try_alloc"
path = "tests/try_alloc.rs"
harness = false

[dev-dependencies]
quickcheck = "0.9.0"
criterion = "0.3.0"
rand = "0.7"

[features]
default = ["test_skip_miri_quickchecks"]
collections = []
boxed = []
allocator_api = []
# quickchecks may take a long time to run in MIRI
test_skip_miri_quickchecks = []

# [profile.bench]
# debug = true
