[package]
authors = ["Nick Fitzgerald <fitzgen@gmail.com>"]
categories = ["memory-management", "rust-patterns", "no-std"]
description = "A fast bump allocation arena for Rust."
documentation = "https://docs.rs/bumpalo"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "bumpalo"
readme = "README.md"
repository = "https://github.com/fitzgen/bumpalo"
version = "3.16.0"
exclude = ["/.github/*", "/benches", "/tests", "valgrind.supp", "bumpalo.png"]
rust-version = "1.73.0"

[package.metadata.docs.rs]
all-features = true

[lib]
path = "src/lib.rs"
bench = false

[[bench]]
name = "benches"
path = "benches/benches.rs"
harness = false
required-features = ["collections"]

[[test]]
name = "try_alloc"
path = "tests/try_alloc.rs"
harness = false

[dependencies]
# This dependency provides a version of the unstable nightly Rust `Allocator`
# trait on stable Rust. Enabling this feature means that `bumpalo` will
# implement its `Allocator` trait.
allocator-api2 = { version = "0.2.8", default-features = false, optional = true }

# This dependency is here to allow integration with Serde, if the `serde` feature is enabled
serde = { version = "1.0.171", optional = true }

[dev-dependencies]
quickcheck = "1.0.3"
criterion = "0.3.6"
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"

[features]
default = []
collections = []
boxed = []
allocator_api = []
std = []
serde = ["dep:serde"]

# [profile.bench]
# debug = true
